[project]
name = "langchain-rag-system"
version = "0.1.0"
description = "Langchain RAG System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ddgs>=9.9.1",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.3",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "numexpr>=2.14.1",
    "pypdf>=6.3.0",
    "ragatouille>=0.0.9.post2",
    "ruff>=0.14.5",
    "langchain-openai>=0.2.14",
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.0.1",
]
